# lab-flask-rest

./: .coveragerc  .env-example  .flaskenv  .gitignore  .pylintrc  .travis.yml  Dockerfile  Makefile  Procfile  README.md  Vagrantfile  app.py  config.py  pyproject.toml  requirements.txt  setup.cfg  test_app.py  tests.py  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yaml  workflow.yml
docs/: install-with-choco.md  install-with-homebrew.md  install-with-vagrant.md  software-prerequisites.md
service/: __init__.py  config.py  error_handlers.py  models.py  routes.py  service.py  status.py
service/common/: error_handlers.py
tests/: __init__.py  factories.py  pet_factory.py  test_app.py  test_models.py  test_pets.py  test_routes.py  test_service.py
