[tool.poetry]
name = "lab-flask-rest"
version = "0.1.0"
description = "REST API with Flask Lab"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
redis = "^4.5.3"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
honcho = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
flake8 = "^6.1.0"
black = "^23.10.1"
pytest = "^7.4.3"
pytest-pspec = "^0.0.4"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
coverage = "^7.3.2"
green = "^3.4.3"
httpie = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
